# polars_extensions

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_to_pypi.yml
crates/polars-custom-utils/: Cargo.toml
crates/polars-custom-utils/src/: lib.rs
crates/polars-custom-utils/src/utils/: mod.rs
crates/polars-custom-utils/src/utils/ts/: mod.rs
crates/polars-custom-utils/src/utils/weights/: mod.rs
crates/polars-windowing/: Cargo.toml
crates/polars-windowing/src/: lib.rs
crates/polars-windowing/src/expanding/: cagr.rs  kurtosis.rs  max.rs  mean.rs  min.rs  mod.rs  prod.rs  quantile.rs  skew.rs  stdev.rs  sum.rs  variance.rs
crates/polars-windowing/src/expanding/ewm/: mean.rs  mod.rs  stdev.rs  variance.rs
crates/polars-windowing/src/expanding/no_nulls/: mod.rs
crates/polars-windowing/src/expanding/nulls/: mod.rs
crates/polars-windowing/src/expr/: mod.rs
crates/polars-windowing/src/rolling/: cagr.rs  kurtosis.rs  mean.rs  mod.rs  prod.rs  quantile.rs  skew.rs  stdev.rs  sum.rs  variance.rs
crates/polars-windowing/src/rolling/no_nulls/: mod.rs
crates/polars-windowing/src/rolling/nulls/: mod.rs
examples/: run.py
python/py_polars_ext/: __init__.py  _utils.py  ewm.py  pypolars.pyi  typing.py  window.py
python/py_polars_ext/enums/: windowing.py
src/: expanding.rs  lib.rs  main.rs  sliding.rs  window.rs
tests/: test_pig_latinnify.py  test_sliding_mean.py
