[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-extensions"
requires-python = ">=3.8"
dependencies = [
  "polars >= 0.20.16, !=1.3.0",
  "pyarrow == 18.0.0",
  "numpy >= 1.26.2, <1.27.0",
  "pandas == 2.2.3",
  'typing-extensions; python_version <= "3.11"',
]

classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
module-name = "py_polars_ext.pypolars"
python-source = "python"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[tool.poetry]
include = ["py_polars_ext/py.typed"]

[tool.dependencies]
ruff = "*"
pytest = "*"